# puzzled

./: .gitignore  AGENTS.md  Cargo.toml  PROJECT.md  biome.json  buf.yaml  bunfig.toml  lefthook.yml  package.json  sylphx.json  sylphx.toml  turbo.json
crates/puzzled-core/: Cargo.toml
crates/puzzled-core/src/: lib.rs  random.rs  scoring.rs  sudoku.rs
crates/puzzled-core/src/capabilities/: mod.rs
crates/puzzled-core/src/capabilities/billing_access/: mod.rs
crates/puzzled-core/src/capabilities/billing_access/domain/: mod.rs  policy.rs
crates/puzzled-core/src/capabilities/gamification/: mod.rs
crates/puzzled-core/src/capabilities/gamification/domain/: achievement_tier.rs  mod.rs
crates/puzzled-core/src/capabilities/identity_policy/: mod.rs
crates/puzzled-core/src/capabilities/identity_policy/domain/: mod.rs  oauth_providers.rs  redirect_security.rs  roles.rs
crates/puzzled-core/src/capabilities/jobs_policy/: mod.rs
crates/puzzled-core/src/capabilities/jobs_policy/domain/: backoff.rs  job_catalog.rs  mod.rs
crates/puzzled-core/src/capabilities/leaderboard/: mod.rs
crates/puzzled-core/src/capabilities/leaderboard/domain/: enrich.rs  mod.rs
crates/puzzled-core/src/capabilities/presentation_policy/: mod.rs
crates/puzzled-core/src/capabilities/presentation_policy/domain/: analytics_timing.rs  game_color_themes.rs  mod.rs  motion_duration.rs  motion_easing.rs  reduced_motion.rs  region_colors.rs
crates/puzzled-core/src/capabilities/privacy/: mod.rs
crates/puzzled-core/src/capabilities/privacy/domain/: mod.rs
crates/puzzled-core/src/capabilities/product_policy/: mod.rs
crates/puzzled-core/src/capabilities/product_policy/domain/: html_escape.rs  i18n_locale.rs  mod.rs  time_constants.rs  user_profile_limits.rs
crates/puzzled-core/src/capabilities/puzzle_play/: mod.rs
crates/puzzled-core/src/capabilities/puzzle_play/application/: game_flows.rs  mod.rs
crates/puzzled-core/src/capabilities/puzzle_play/domain/: arithmo.rs  block_slide.rs  cryptogram.rs  daily_time.rs  killer_sudoku.rs  mod.rs  nonogram_clues.rs  pattern_match.rs  placement.rs  quad_words.rs  random.rs  random_lcg.rs  scoring.rs  share_squares.rs  (+5 more)
crates/puzzled-core/tests/: architecture_boundaries.rs  puzzle_grid_contract.rs  puzzle_grid_parity.rs  puzzle_solution_contract.rs  puzzle_solution_parity.rs
crates/puzzled-server/: Cargo.toml  Dockerfile
crates/puzzled-server/src/: achievement_tier_pure.rs  analytics_timing_pure.rs  app_config_pure.rs  arithmo.rs  auth_sessions.rs  backoff_pure.rs  billing_access_pure.rs  block_slide.rs  crossword_grid.rs  cryptogram.rs  daily_time.rs  db_config.rs  domain_enums_pure.rs  error_codes_pure.rs  flags_hash_pure.rs  format_url_pure.rs  game_color_themes_pure.rs  game_format.rs  game_slugs.rs  games_api.rs  gamification_api.rs  generation_jobs.rs  html_escape_pure.rs  jobs_retry_delays_pure.rs  key_validation_pure.rs  killer_sudoku.rs  leaderboard.rs  leaderboard_db.rs  leaderboard_enrich.rs  lib.rs  llm_json_parse_pure.rs  main.rs  motion_duration_pure.rs  motion_easing_pure.rs  nonogram_clues.rs  pii_scrub_pure.rs  pkce_pure.rs  placement.rs  platform_jwt.rs  platform_webhooks.rs  (+26 more)
crates/puzzled-server/src/bootstrap/: health.rs  lifecycle.rs  mod.rs  router.rs  state.rs
crates/puzzled-server/src/capabilities/: mod.rs
crates/puzzled-server/src/capabilities/gamification/: mod.rs
crates/puzzled-server/src/capabilities/identity_access/: contract.rs  mod.rs
crates/puzzled-server/src/capabilities/leaderboard/: mod.rs
crates/puzzled-server/src/capabilities/preferences/: mod.rs
crates/puzzled-server/src/capabilities/puzzle_play/: mod.rs
crates/puzzled-server/src/shared/: mod.rs
crates/puzzled-server/testdata/: platform_jwt_test_priv.pem  platform_jwt_test_pub.pem
crates/puzzled-server/tests/: architecture_shell.rs  health_contract.rs  health_parity.rs  leaderboard_parity.rs  leaderboard_stub.rs  puzzle_grid_http_contract.rs  puzzle_grid_http_parity.rs  puzzle_solution_http_parity.rs  puzzled_differential.rs
(+990 files in other folders)
