[package]
name = "puzzled-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Puzzled Rust API runtime (ADR-168 S0 health + leaderboard read stub)"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "puzzled-server"
path = "src/main.rs"

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "time"] }
tower = "0.5"
