[package]
name = "puzzled-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Puzzled Rust API runtime (ADR-168 S2 health + leaderboard + puzzle grid + solution submit)"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "puzzled-server"
path = "src/main.rs"

[dependencies]
puzzled-core = { path = "../puzzled-core" }
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde"] }
jsonwebtoken = { version = "10", default-features = false, features = ["use_pem"] }
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }

[dev-dependencies]
puzzled-core = { path = "../puzzled-core" }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rsa = { version = "0.9", features = ["pem"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "time"] }
tower = "0.5"
